tests/baselines/reference/checkJsdocTypeTagOnObjectProperty2.errors.txt
tests/cases/conformance/jsdoc/0.js(5,3): error TS2322: Type '数字' is not assignable to type '文字 | 未定'.
tests/cases/conformance/jsdoc/0.js(7,3): error TS2322: Type '(n1: 任意) => 文字' is not assignable to type '(arg0: 数字) => 数字'.
  Type '文字' is not assignable to type '数字'.
tests/cases/conformance/jsdoc/0.js(11,3): error TS2322: Type '(n1: 任意) => 文字' is not assignable to type '(arg0: 数字) => 数字'.
  Type '文字' is not assignable to type '数字'.
tests/cases/conformance/jsdoc/0.js(13,3): error TS2322: Type '(num?: 文字) => 文字' is not assignable to type '(arg0: 数字) => 数字'.
  Types of parameters 'num' and 'arg0' are incompatible.
    Type '数字' is not assignable to type '文字 | 未定'.
tests/cases/conformance/jsdoc/0.js(15,3): error TS2322: Type '未定' is not assignable to type '文字'.
tests/cases/conformance/jsdoc/0.js(19,5): error TS2322: Type '数字' is not assignable to type '文字'.
tests/cases/conformance/jsdoc/0.js(22,22): error TS2345: Argument of type '"0"' is not assignable to parameter of type '数字'.


==== tests/cases/conformance/jsdoc/0.js (7 errors) ====
    // @ts-check
    var lol;
    const obj = {
      /** @type {string|undefined} */
      bar: 42,
      ~~~~~~~
!!! error TS2322: Type '数字' is not assignable to type '文字 | 未定'.
      /** @type {function(number): number} */
      method1(n1) {
      ~~~~~~~
!!! error TS2322: Type '(n1: 任意) => 文字' is not assignable to type '(arg0: 数字) => 数字'.
!!! error TS2322:   Type '文字' is not assignable to type '数字'.
          return "42";
      },
      /** @type {function(number): number} */
      method2: (n1) => "lol",
      ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(n1: 任意) => 文字' is not assignable to type '(arg0: 数字) => 数字'.
!!! error TS2322:   Type '文字' is not assignable to type '数字'.
      /** @type {function(number): number} */
      arrowFunc: (num="0") => num + 42,
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(num?: 文字) => 文字' is not assignable to type '(arg0: 数字) => 数字'.
!!! error TS2322:   Types of parameters 'num' and 'arg0' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字 | 未定'.
      /** @type {string} */
      lol
      ~~~
!!! error TS2322: Type '未定' is not assignable to type '文字'.
    }
    lol = "string"
    /** @type {string} */
    var s = obj.method1(0);
        ~
!!! error TS2322: Type '数字' is not assignable to type '文字'.
    
    /** @type {string} */
    var s1 = obj.method2("0");
                         ~~~
!!! error TS2345: Argument of type '"0"' is not assignable to parameter of type '数字'.